Fixed bug (re spacing) in hamburger menu

--- a/src/style.css
+++ b/src/style.css
@@ -25,6 +25,7 @@ h2 {
 
 .navigation {
   position: fixed;
+  top: 0;
   width: 100%;
 }
 
